maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:29: error: reassignment to val
      case 0 => avanceVersNord(); etat = 1;
                                       ^IslandMaze:31: error: reassignment to val
      case 1 => suitAGauche(); etat = 0;
                                    ^IslandMaze:36: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return etat
           ^IslandMaze:36: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
    return etat
    ^